<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_app_url" translatable="false">https://practicum.yandex.ru/learn/android-developer-plus</string>
    <string name="support_email" translatable="false">dmitriy.proshutinskiy@phystech.edu</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="searchNotFound">Ничего не нашлось</string>
    <string name="searchError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="searchHistoryTitle">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="trackDuration">Длительность</string>
    <string name="trackAlbum">Альбом</string>
    <string name="trackYear">Год</string>
    <string name="trackGenre">Жанр</string>
    <string name="trackCountry">Страна</string>
    <string name="trackProgressDefault" translatable="false">00:00</string>
</resources>