<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        style="@style/PlaylistToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/search" />

    <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/search_field_background"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_search_24"
            android:contentDescription="@null"
            app:tint="@color/searchBarOnSurface" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/YPBlack"
            android:textColorHint="@color/searchBarOnSurface"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:textSize="16sp"
            />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_clear_cross_16"
            android:contentDescription="@null"
            android:visibility="gone"
            app:tint="@color/searchBarOnSurfaceAlt" />

    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_content"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_history_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/search_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/search_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:paddingBottom="12dp"
                android:paddingHorizontal="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/searchHistoryTitle"
                android:textColor="@color/onSurface"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_history_button"
                style="@style/UpdateButton"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/clearHistory" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/search_placeholderNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
    >
        <ImageView
            android:src="@drawable/tracks_not_found"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="16dp"
        />
        <TextView
            android:text="@string/searchNotFound"
            style="@style/SystemInfoTitle"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_placeholderError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        >
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/tracks_error"
            android:paddingBottom="16dp"
        />

        <TextView
            android:text="@string/searchError"
            style="@style/SystemInfoTitle"
            android:paddingBottom="24dp"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            style="@style/UpdateButton"
            android:text="@string/update"
        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
