<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingBottom="4dp"
        android:paddingEnd="52dp"
        android:paddingTop="4dp"
        android:paddingStart="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/setting_title"
        app:titleTextColor="@color/black">
    </com.google.android.material.appbar.MaterialToolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:textColor="@color/black">
        </TextView>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ToggleButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:textColor="@color/black">
        </TextView>
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="TODO"
            android:src="@drawable/share"
            android:background="@color/transparent">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:textColor="@color/black">
        </TextView>
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/support"
            android:background="@color/transparent">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:textColor="@color/black">
        </TextView>
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/chevron_right"
            android:background="@color/transparent">
        </ImageButton>
    </LinearLayout>



</LinearLayout>